--- a/bible/1Peter1:17-19.tex
+++ b/bible/1Peter1:17-19.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \begin{document}
-
+\title{1 Peter 1:17-19}
 \section{The Father's judgement (v.~17a)}
 This verse begins with, ``And if\ldots'',
     which means that it is the following truth that
