Added materials for church Bible study.

--- a/presentations/ob1_wg_paper/paper.tex
+++ b/presentations/ob1_wg_paper/paper.tex
@@ -248,22 +248,23 @@ For the design objective, we choose a boundary-value formulation
     where $H_z^\text{perfect}$ is constructed 
     of the exact input and output waveguide modes at the input and output ports
     of the optimization region (where the coupler will be placed),
-    repectively, and of zero-amplitude fields at the unused ports.
+    repectively, and of zero-amplitude fields at the unused ports, 
+    as illustrated in Fig.~\ref{fig:intro}.
 
-% \begin{figure}[htbp]
-%     \centering
-%     \includegraphics[width=\textwidth]{intro} 
-%     \caption{Boundary-value formulation of the design objective.
-%         The values of $H_z^\text{perfect}$, 
-%             defined along the dashed box surrounding the design area
-%             (coupling structure), 
-%             are shown in orange (color online).
-%         The values of $H_z^\text{perfect}$ along the top and bottom edges
-%             of the dashed box are set to zero.
-%         In this schematic, the fundamental and second-order waveguide modes
-%             have been chosen as the input and output modes respectively.}
-%     \label{fig:intro}
-% \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{intro} 
+    \caption{Boundary-value formulation of the design objective.
+        The values of $H_z^\text{perfect}$, 
+            defined along the dashed box surrounding the design area
+            (coupling structure), 
+            are shown in orange (color online).
+        The values of $H_z^\text{perfect}$ along the top and bottom edges
+            of the dashed box are set to zero.
+        In this schematic, the fundamental and second-order waveguide modes
+            have been chosen as the input and output modes respectively.}
+    \label{fig:intro}
+\end{figure}
 
 The mathematical form of the design objective is simply, 
     \begin{equation}
