Updated with additional verses.

--- a/bible/Luke12:13-48.tex
+++ b/bible/Luke12:13-48.tex
@@ -22,10 +22,22 @@ From v.~42-43 and v.~48, what are the two main criteria for God's
 \begin{enumerate}
 \item Based on 2 Corinthians 5:10, 
     what will God judgement toward believers be based on?
+\item Based on Romans 8:1, what will God's judging of believers \emph{not} 
+    be based on?
 \item Based on Ephesians 2:10, how is the work of every believer determined?
 \item Based on Matthew 25:14-15, where does the believer obtain the resources
     needed to accomplish his work?
 \item How does Matthew 25:20-23 inform us on how God will judge believers?
 \item How does 1 Corinthians 3:11-15 inform us of God's judging of believers?
 \end{enumerate}
+
+\section*{Additional passages}
+\begin{itemize}
+\item Romans 14:10-12
+\item 1 Corinthians 4:3-5
+\item Ephesians 6:7-8
+\item Revelation 22:12
+\end{itemize}
+
 \end{document}
+
